src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-no-traits.min_tait.stderr
error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:6:12
   |
LL | type Foo = impl 'static;
   |            ^^^^^^^^^^^^

error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:13:13
   |
LL | fn bar() -> impl 'static {
   |             ^^^^^^^^^^^^

error: aborting due to 2 previous errors

